# mocap_optitrack2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mocap.yaml  params.yaml
include/mocap_optitrack/: data_model.h  mocap_config.h  rigid_body_publisher.h
launch/: mocap.launch.py
src/: CMakeLists.txt  mocap_config.cpp  mocap_node.cpp  rigid_body_publisher.cpp  socket.cpp
src/natnet/: natnet_messages.cpp  natnet_messages.h
